2002-07-09  Richard Sandiford  <rsandifo@redhat.com>

        * ld-scripts/dynamic-sections*: New test.

2002-07-09  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/libdso-3.d, ld-cris/dso-3.s, ld-cris/noglob1.s,
	ld-cris/noglob1.d: New tests.

	* ld-cris/libdso-1.d: Tweak for change in size of dynamic sections.

2002-07-03  Alan Modra  <amodra@bigpond.net.au>

	* lib/ld-lib.exp (default_ld_nm): Run nm with LC_ALL=C to ensure
	consistent sorting.
	(run_dump_test): Likewise for objdump/nm/objcopy/readelf.
	* ld-sh/sh64/sh64.exp (run_ld_link_tests): Likewise.

2002-06-29  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-mmix/sec-8m.d, ld-mmix/sec-8m.s, ld-mmix/sec-8a.s,
	ld-mmix/sec-8b.s, ld-mmix/sec-8d.s: New test.

2002-06-18  Chris Demetriou  <cgd@broadcom.com>

	* ld-mips-elf/empic2-ref.s: Add a missing .end, apparently
	turned up by recent assembler changes.

2002-06-17  Tom Rix  <trix@redhat.com>

	* ld-d10v/d10v.exp: New driver for d10v.
	* ld-d10v/default_layout.d : New test.
	* ld-d10v/regression-001.lt: New test for a linker regression.
	* ld-d10v/linktest-002.lt: New test for run_link_test.
	* ld-d10v/reloc-001.d - reloc-016.d: New tests.

2002-06-11  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* ld-scripts/cross1.t: Add .hash, .dynstr and .dynsym sections to
	script.

2002-06-11  Andreas Jaeger  <aj@suse.de>

	* ld-undefined/undefined.exp: Add s390x to dwarf2 xfails.

2002-06-10  Richard Sandiford  <rsandifo@redhat.com>

	* ld-mips-elf/region1a.s,
	* ld-mips-elf/region1b.s,
	* ld-mips-elf/region1.t,
	* ld-mips-elf/region1.d: New test.
	* ld-mips-elf/mips-elf.exp: Run it.

2002-06-07  Nick Clifton  <nickc@cambridge.redhat.com>

	* ld-scripts/phdrs2.s: Use .p2align instead of .align.
	Use section names .foo and .bar instead of .text and .data.
	* ld-scripts/phdrs2.t: Refer to .foo and .bar instead of .text
	and .data.

2002-06-06  David Heine <dlheine@tensilica.com>

	* ld-scripts/phdrs2.exp: New file: Run second phdrs test.