@@ -1,0 +1,6 @@
+  .text
+x:
+  move.d expobj:GOT,$r10
+  move.d expobj:PLT,$r10
+  move.d expfn:GOT,$r10
+  move.d expfn:PLT,$r10
